# trlike

./: .gitignore  CMakeLists.txt  README
docs/: architecture.md
docs/Human/: 关于地形生成——guideline
docs/Logs/: 2026-06-14-cave-adaptive-chunk-threshold.md  2026-06-14-cave-coverage-soft-gating.md  2026-06-14-cave-density-connectivity-balance.md  2026-06-14-cave-distribution-uniformity.md  2026-06-14-cave-generation-tuning.md  2026-06-14-cave-regional-equalization.md  2026-06-14-world-generation-rewrite.md  2026-06-14-worldgenerator-guideline-simplification.md
docs/VibeDocing/: 关于地形生成——理解.md
src/: main.cpp
src/Core/: Constants.hpp  Game.cpp  Game.hpp  Math.hpp  Types.hpp
src/Graphics/: Camera.cpp  Camera.hpp  TextureAtlas.cpp  TextureAtlas.hpp  TileRenderer.cpp  TileRenderer.hpp
src/World/: Chunk.cpp  Chunk.hpp  Tile.hpp  TileRegistry.cpp  TileRegistry.hpp  World.cpp  World.hpp  WorldGenerator.cpp  WorldGenerator.hpp
